Exercise Data Grid View

--- a/RetreavingData_066/App.config
+++ b/RetreavingData_066/App.config
@@ -6,6 +6,9 @@
         <add name="RetreavingData_066.Properties.Settings.AdventureWorksConnectionString"
             connectionString="Data Source=LAPTOP-NNJOPBIC\SQLEXPRESS;Initial Catalog=AdventureWorks;User ID=sa;Password=gmgm872wc0"
             providerName="System.Data.SqlClient" />
+        <add name="RetreavingData_066.Properties.Settings.ProdiTIConnectionString"
+            connectionString="Data Source=LAPTOP-NNJOPBIC\SQLEXPRESS;Initial Catalog=ProdiTI;User ID=sa;Password=gmgm872wc0"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
